--- a/MyWebPortfolio/Home.html
+++ b/MyWebPortfolio/Home.html
@@ -147,7 +147,7 @@
       const MicrosoftInfo = `
             <div class='microsoft-info'>
                 <b>Mentee </b><span style='color: purple; font-size: 1.5rem;'>@ Microsoft</span>
-                <p>June 2024 - August</p>
+                <p>June 2024 - August 2024</p>
                 <div class=duties>
                   <p>&check; Improved coding, data analysis, communcation, and problem-solving skills in a professional tech environment.</p>
                   <p>&check; Gained mentorship and guidance from Microsoft professionals, learning industry best practicies and technical skills.</p>
