--- a/MyWebPortfolio/contact.html
+++ b/MyWebPortfolio/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>David Fakunle</title>
-    <link rel="stylesheet" href="Home.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="contact.css" />
   </head>
   <body>
@@ -12,7 +12,7 @@
       <div class="headercontent">
         <h1>David Fakunle.</h1>
         <nav>
-          <a href="Home.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="About.html">About</a>
           <a href="Projects.html">Projects</a>
         </nav>
@@ -45,7 +45,7 @@
         </section>
     <footer>
       <div class="left">
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Projects.html">Project</a>
         <a href="About.html">About</a>
         <a href="contact.html">Contact</a>
