--- a/MyWebPortfolio/contact.html
+++ b/MyWebPortfolio/contact.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="headercontent">
-        <h1>David Fakunle.</h1>
+        <h1>David F</h1>
         <nav>
           <a href="index.html">Home</a>
           <a href="About.html">About</a>
@@ -27,7 +27,7 @@
         <div class="hero">
             <div class="text">
                 <h1>Get In Touch<span style="color: purple">.</span></h1>
-                <p>Looking to partner or work together? <br>Reach out, and I'll get back to you in the next 48 hours</p>
+                <p>Looking to <span style="color: purple">partner </span> or work together? <br>Reach out, and I'll get back to you in the next <span style="color: purple">48 hours</span></p>
                 <div class="email">
                   <img src="PortfolioImages/email-svgrepo-com.svg" alt="">
                   <a href="mailto:dfakunle06@gmail.com"><p>dfakunle06@gmail.com</p></a>
