--- a/MyWebPortfolio/index.html
+++ b/MyWebPortfolio/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="headercontent">
-        <h1>David Fakunle.</h1>
+        <h1>David F.</h1>
         <nav>
           <a href="index.html">Home</a>
           <a href="About.html">About</a>
@@ -52,7 +52,7 @@
           </div>
           <div class="project">
             <img src="PortfolioImages/Asl.jpg" alt="Asl image">
-            <h2>ASl Identifier</h2>
+            <h2>ASL Identifier</h2>
             <p>David's project is focused on creating a sign language detector in Python <br>
               that uses TensorFlow and OpenCV to train a convolutional neural network for identifying sign language letters from images.</p>
           </div>
@@ -175,6 +175,8 @@
       function showComingSoon(){
         document.getElementById("InfoEXP").innerHTML = ComingSoon
       }
+
+
     </script>
   </body>
 </html>
