--- a/MyWebPortfolio/About.html
+++ b/MyWebPortfolio/About.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="headercontent">
-        <h1>David Fakunle.</h1>
+        <h1>David F</h1>
         <nav>
           <a href="index.html">Home</a>
           <a href="About.html">About</a>
@@ -31,7 +31,7 @@
             <img src="PortfolioImages/MyStack.png" alt="My Stack">
           </div>
           <div id="TX">
-            <p>My Special Place.</p>
+            <p>My Home.</p>
             <img  src="PortfolioImages/myHome.png" alt=" My Special Place ">
           </div>
         </div>
