--- a/MyWebPortfolio/Projects.html
+++ b/MyWebPortfolio/Projects.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="headercontent">
-          <h1>David Fakunle.</h1>
+          <h1>David F</h1>
           <nav>
             <a href="index.html">Home</a>
             <a href="About.html">About</a>
