fixed links, fixed margins

--- a/MyWebPortfolio/index.html
+++ b/MyWebPortfolio/index.html
@@ -138,7 +138,7 @@
         <div class="images">
           <a href="https://www.instagram.com/fakunledavid_/"><img src="PortfolioImages/instagram-svgrepo-com.svg" alt="insta" /></a>
           <a href="https://www.linkedin.com/in/david-fakunle-601648184/"><img src="PortfolioImages/linkedin-svgrepo-com.svg" alt="linkedIn" /></a>
-          <img src="PortfolioImages/github.svg" alt="Github" />
+          <a href="https://github.com/DavidFakunle"><img src="PortfolioImages/github.svg" alt="Github" /></a>
         </div>
         <p>&copy 2024 All Rights Reserved</p>
       </div>
