--- a/MyWebPortfolio/About.html
+++ b/MyWebPortfolio/About.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>David Fakunle</title>
+    <link rel="shortcut icon" href="PortfolioImages/portfolio icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="About.css">
   </head>
