--- a/MyWebPortfolio/index.html
+++ b/MyWebPortfolio/index.html
@@ -8,15 +8,25 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header>
+    <header id="header">
       <div class="headercontent">
         <h1>David F.</h1>
-        <nav>
-          <a href="index.html">Home</a>
+        <nav class="desktop-only">
+          <a href="index.html"><span style="color:purple">Home</span></a>
           <a href="About.html">About</a>
           <a href="Projects.html">Projects</a>
         </nav>
-        <a href="contact.html"><img src="PortfolioImages/message-circle-lines-alt-svgrepo-com.svg" alt="Icon" /></a>
+        <nav class="mobile-nav">
+          <img onclick="closeMenu()" src="PortfolioImages/close-bold-svgrepo-com.svg" alt="">
+          <a href="index.html"><span style="color:purple">Home</span></a>
+          <a href="About.html">About</a>
+          <a href="Projects.html">Projects</a>
+          <a href="contact.html">Contact</a>
+        </nav>
+        <div class="icons">
+          <a  class="desktop-only" href="contact.html"><img src="PortfolioImages/message-circle-lines-alt-svgrepo-com.svg" alt="Icon" /></a>
+          <img onclick="openMenu()" class="open-menu" src="PortfolioImages/hamburger-menu-svgrepo-com.svg" alt="">
+        </div>
       </div>
     </header>
     <main>
@@ -123,7 +133,8 @@
         </p>
       </section>
     </main>
-    <footer>
+   <button id="buttonToTop"><img src="PortfolioImages/arrow-square-up-svgrepo-com.svg" alt=""></button>
+    <footer> 
       <div class="left">
         <a href="index.html">Home</a>
         <a href="Projects.html">Project</a>
@@ -176,8 +187,40 @@
       function showComingSoon(){
         document.getElementById("InfoEXP").innerHTML = ComingSoon
       }
+      // scroll to top var
+      const scrollToTop = document.getElementById("buttonToTop") 
+      const menuState = document.querySelector(".mobile-nav").style.display
+      //shows the button after you scoll past 600px
+      window.onscroll = function(){
+        console.log(document.documentElement.scrollTop)
+        if(document.documentElement.scrollTop > 600) {
+          if (menuState == "none"){
+            scrollToTop.style.display = "block"
 
+          }
+          else{
+            scrollToTop.style.display = "none"
+          }
+        }
+        else {
+          scrollToTop.style.display = "none"
+        }
+      }
+      //funtion that controls scroll to top when clicked
 
+      scrollToTop.onclick = function(){
+        window.scrollTo({top:0, behavior:"smooth"})
+      }
+
+      // function openMenu(){
+        // document.querySelector(".mobile-nav").style.display="flex"
+        // document.querySelector("#buttonToTop").style.display="none"
+      // }
+
+      // function closeMenu(){
+        // document.querySelector(".mobile-nav").style.display="none"
+        // document.querySelector("#buttonToTop").style.display="none"
+      // }
     </script>
   </body>
 </html>
