--- a/MyWebPortfolio/contact.html
+++ b/MyWebPortfolio/contact.html
@@ -11,17 +11,24 @@
   <body>
     <header>
       <div class="headercontent">
-        <h1>David F</h1>
-        <nav>
+        <a href="index.html"><h1>David F</h1></a>
+        <nav class ="desktop-only">
           <a href="index.html">Home</a>
           <a href="About.html">About</a>
           <a href="Projects.html">Projects</a>
         </nav>
-        <a href="contact.html"
-          ><img
-            src="PortfolioImages/message-circle-lines-alt-svgrepo-com.svg"
-            alt="Icon"
-        /></a>
+        <nav class="mobile-nav">
+          <img onclick= "closeMenu()" src="PortfolioImages/close-bold-svgrepo-com.svg" alt="">
+          <a href="index.html">Home</a>
+          <a href="About.html">About</a>
+          <a href="Projects.html">Projects</a>
+          <a href="contact.html"><span style="color: purple;">Contact</span></a>
+        </nav>
+        <div class="icons">
+          <a class= "desktop-only" href="contact.html"><img src="PortfolioImages/message-circle-lines-alt-svgrepo-com.svg" alt="Icon"/></a>
+          <img onclick="openMenu()" class="open-menu" src="PortfolioImages/hamburger-menu-svgrepo-com.svg" alt="">
+
+        </div>
       </div>
     </header>
     <section>
@@ -65,5 +72,38 @@
         <p>&copy 2024 All Rights Reserved</p>
       </div>
     </footer>
+    <script>
+      window.onscroll = function(){
+        const menuState = document.querySelector(".mobile-nav").style.display
+        console.log(document.documentElement.scrollTop)
+        if(document.documentElement.scrollTop > 600) {
+          if (menuState === "none" || menuState === "" ){
+            scrollToTop.style.display = "block"
+
+          }
+          else{
+            scrollToTop.style.display = "none"
+          }
+        }
+        else {
+          scrollToTop.style.display = "none"
+        }
+      }
+      //funtion that controls scroll to top when clicked
+
+      scrollToTop.onclick = function(){
+        window.scrollTo({top:0, behavior:"smooth"})
+      }
+
+      function openMenu(){
+         document.querySelector(".mobile-nav").style.display="flex"
+         document.querySelector("#buttonToTop").style.display="none"
+      }
+
+      function closeMenu(){
+        document.querySelector(".mobile-nav").style.display="none"
+        document.querySelector("#buttonToTop").style.display="none"
+      }
+    </script>
   </body>
 </html>
