--- a/MyWebPortfolio/Projects.html
+++ b/MyWebPortfolio/Projects.html
@@ -51,7 +51,7 @@
                     <div class="imgdiv">
                         <img src="PortfolioImages/Asl.jpg" alt="translate">
                     </div>
-                    <h1>ASl Project</h1>
+                    <h1>ASL Project</h1>
                     <p>Python project with the goal of connecting people who are deaf to be able to <br>
                     communicate with people who are not deaf.</p>
                 </div>
