--- a/MyWebPortfolio/contact.html
+++ b/MyWebPortfolio/contact.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="number">
                   <img src="PortfolioImages/phone-calling-rounded-svgrepo-com.svg" alt="phone">
-                  <a href="tel:83248374985">+1 832-847-3985</p></a>
+                  <a href="tel:83248374985"><p>+1 832-847-3985</p></a>
                 </div>
             </div>
             <div class="images"> 
