--- a/MyWebPortfolio/index.html
+++ b/MyWebPortfolio/index.html
@@ -10,15 +10,15 @@
   <body>
     <header id="header">
       <div class="headercontent">
-        <a href="index.html"><h1>David F</h1></a>
+        <a href="index.html"><h1>DAVID F</h1></a>
         <nav class="desktop-only">
-          <a href="index.html"><span style="color:purple">Home</span></a>
+          <a href="index.html"><span style="color:purple; font-weight: bold;">Home</span></a>
           <a href="About.html">About</a>
           <a href="Projects.html">Projects</a>
         </nav>
         <nav class="mobile-nav">
           <img onclick="closeMenu()" src="PortfolioImages/close-bold-svgrepo-com.svg" alt="">
-          <a href="index.html"><span style="color:purple">Home</span></a>
+          <a href="index.html"><span style="color:purple; font-weight: bold;">Home</span></a>
           <a href="About.html">About</a>
           <a href="Projects.html">Projects</a>
           <a href="contact.html">Contact</a>
