New project added

--- a/MyWebPortfolio/index.html
+++ b/MyWebPortfolio/index.html
@@ -57,15 +57,19 @@
               <img src="PortfolioImages/Google Translate.png" alt="Google Translate" />
             <h2>Google Translate</h2>
             <p>
-              The translator project is a Python application that translates text between languages, 
-              <br>featuring text-to-speech and language detection. It uses libraries like the Google Translate API or similar services.
+              A Python application for translating text, featuring text-to-speech and language detection, using libraries like Google Translate API.
             </p>
           </div>
           <div class="project">
             <img src="PortfolioImages/Asl.jpg" alt="Asl image">
             <h2>ASL Identifier</h2>
-            <p>David's project is focused on creating a sign language detector in Python <br>
-              that uses TensorFlow and OpenCV to train a convolutional neural network for identifying sign language letters from images.</p>
+            <p>David's project is a Python-based sign language detector using TensorFlow and OpenCV to train a CNN for recognizing letters from images.</p>
+          </div>
+          <div class="project">
+            <img src="PortfolioImages/Advice.png" alt="Advice Image">
+            <h2>Give me Advice</h2>
+            <p>A website delivering nonstop, personalized advice with just a click.</p>
+
           </div>
         </div>
       </section>
