--- a/MyWebPortfolio/Projects.html
+++ b/MyWebPortfolio/Projects.html
@@ -55,6 +55,13 @@
                     <p>Python project with the goal of connecting people who are deaf to be able to <br>
                     communicate with people who are not deaf.</p>
                 </div>
+                <div class="adviceproject">
+                  <div class="imgdiv">
+                    <img src="PortfolioImages/Advice.png" alt="Advice Card">
+                  </div>
+                  <h1>Give me an Advice</h1>
+                  <p>JavaScript and Html project with the goal of giving people advice with the click of a button.</p>
+                </div>
             </div>
         </section> 
       </main>
